Added some chamges to salary rangeslider

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -167,6 +167,14 @@ h2, .h2 {
   color: $red;
 }
 
+.lightgray {
+  color: $lightgray;
+}
+
+.blue {
+  color: $blue;
+}
+
 .hidden575 {
   @media(max-width: 575px) {
     display: none;
