--- a/src/components/filters/filters.hbs
+++ b/src/components/filters/filters.hbs
@@ -299,15 +299,15 @@
                     <ul class="filter__relocation">
                         <li class="filter__relocation-item">
                             <input id="relocation1" class="thumbler__toggle thumbler__toggle-round" type="checkbox">
-                            <label for="relocation1"><span class="thumbler__title">Remote</span></label>
+                            <label for="relocation1" class="thumbler__label"><span class="thumbler__title">Remote</span></label>
                         </li>
                         <li class="filter__relocation-item">
                             <input id="relocation2" class="thumbler__toggle thumbler__toggle-round" type="checkbox">
-                            <label for="relocation2"><span class="thumbler__title">Relocate</span></label>
+                            <label for="relocation2" class="thumbler__label"><span class="thumbler__title">Relocate</span></label>
                         </li>
                         <li class="filter__relocation-item">
                             <input id="relocation3" class="thumbler__toggle thumbler__toggle-round" type="checkbox">
-                            <label for="relocation3"><span class="thumbler__title">Other city</span></label>
+                            <label for="relocation3" class="thumbler__label"><span class="thumbler__title">Other city</span></label>
                         </li>
                     </ul>
                 </div>
