--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -17,6 +17,10 @@
 @import './registration/registration';
 @import './recruitment-form/recruitment-form';
 @import './dashboard/dashboard';
+@import './candidate/candidate';
+@import './offer/offer';
+@import './vacancy/vacancy';
+@import './interview/interview';
 @import './search-form/search-form';
 @import './upload-form/upload-form';
 @import './worksheet-form/worksheet-form';
@@ -24,6 +28,7 @@
 @import './candidates-profile/candidates-profile';
 @import './candidates-account/candidates-account';
 @import './candidate-recruiters/candidate-recruiters';
+@import './subscribes/subscribes';
 @import './settings-form/settings-form';
 @import './candidates-settings/candidates-settings';
 @import './applicant/applicant';
