--- a/src/components/salary-filter/salary-filter.scss
+++ b/src/components/salary-filter/salary-filter.scss
@@ -1,5 +1,5 @@
 .salary-filter {
-  display: none;
+  touch-action: none;
 
   &__info {
     color: $lightgray;
@@ -64,7 +64,8 @@
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  width: 137px;
+  width: 100%;
+  position: relative;
 
   @media(max-width: 1099px) {
     width: 100%;
@@ -75,42 +76,41 @@
   &__axis {
     height: 1px;
     background-color: #E6ECF5;
-    width: 69px !important;
+    width: 100% !important;
+    max-width: 137px;
 
     @media(max-width: 1099px) {
-      width: 100% !important;
-      max-width: 300px;
+      max-width: 100%;
     }
   }
 }
 
 .rangeslider {
-  width: 69px;
-
-  @media(max-width: 1099px) {
-    width: 50%;
-    //outline: 1px solid red;
-  }
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: -13px;
+  margin-bottom: 10px;
 
   &__fill {
     height: 1px;
-    background-color: #E6ECF5;
+    background: #E6ECF5;
 
     &__bg {
       height: 1px;
-      background-color: $blue;
+      background: $blue;
     }
   }
 
   &:last-child {
 
     .rangeslider__fill {
-      background-color: $blue;
+      //background: $blue;
       height: 1px;
     }
 
     .rangeslider__fill__bg {
-      background-color: #E6ECF5;
+      background: #E6ECF5;
       height: 1px;
     }
   }
@@ -120,7 +120,7 @@
     width: 13px;
     height: 13px;
     background: $blue;
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0.04), 0 2px 6px rgba(0, 0, 0, 0.04), 0 10px 20px rgba(0, 0, 0, 0.04);
+    //box-shadow: 0 0 1px rgba(0, 0, 0, 0.04), 0 2px 6px rgba(0, 0, 0, 0.04), 0 10px 20px rgba(0, 0, 0, 0.04);
 
     @media(max-width: 1099px) {
       width: 20px;
