--- a/src/components/worksheet-form/worksheet-form.hbs
+++ b/src/components/worksheet-form/worksheet-form.hbs
@@ -142,15 +142,15 @@
                 <ul class="filter__relocation" id="employment-type">
                     <li class="filter__relocation-item">
                         <input id="relocation1" class="thumbler__toggle thumbler__toggle-round" type="checkbox" checked>
-                        <label for="relocation1"><span class="thumbler__title">Remote</span></label>
+                        <label for="relocation1"class="thumbler__label"><span class="thumbler__title">Remote</span></label>
                     </li>
                     <li class="filter__relocation-item">
                         <input id="relocation2" class="thumbler__toggle thumbler__toggle-round" type="checkbox">
-                        <label for="relocation2"><span class="thumbler__title">Relocate</span></label>
+                        <label for="relocation2"class="thumbler__label"><span class="thumbler__title">Relocate</span></label>
                     </li>
                     <li class="filter__relocation-item">
                         <input id="relocation3" class="thumbler__toggle thumbler__toggle-round" type="checkbox" checked>
-                        <label for="relocation3"><span class="thumbler__title">Other city</span></label>
+                        <label for="relocation3"class="thumbler__label"><span class="thumbler__title">Other city</span></label>
                     </li>
                 </ul>
             </div>
@@ -193,7 +193,9 @@
                         </div>
                     </div>
                 </label>
+                <div class="worksheet-form__files">Виберiть файл з CV</div>
             </div>
+
         </div>
         <div class="worksheet-form__buttons">
             <a href="#" class="the-button worksheet-form__public-link">Дивитися публічний профіль</a>
