--- a/src/pages/candidates-profile.hbs
+++ b/src/pages/candidates-profile.hbs
@@ -10,7 +10,7 @@
             </div>
             <div class="candidates-profile__activation">
                 <input id="activation" class="thumbler__toggle thumbler__toggle-round" type="checkbox" checked>
-                <label for="activation"><span class="candidates-profile__activation-title">Профiль активовано</span></label>
+                <label for="activation" class="thumbler__label"><span class="candidates-profile__activation-title">Профiль активовано</span></label>
             </div>
 
             <div class="dashboard">
