--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -13,6 +13,7 @@
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 13 <a href="./candidates-account.html">Кандидатський аккаунт</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 14 <a href="./candidates-settings.html">Кандидатськi налаштуваня</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 15 <a href="./candidate-search-recruiters.html">Кандидат переглядає пропозиції рекрутерiв</a></li>
+                <li style="list-style: decimal; margin-left: 20px">Ескiз 16 <a href="./subscribes.html">Підписки</a></li>
             </ol>
         </div>
     </div>
