--- a/src/pages/recruter-dashboard.hbs
+++ b/src/pages/recruter-dashboard.hbs
@@ -99,8 +99,8 @@
                                 </div>
                                 <div class="vacancy__thumbler">
                                     <div class="thumbler">
-                                        <input id="toggle1" class="thumbler__toggle thumbler__toggle-round" type="checkbox">
-                                        <label for="toggle1"></label>
+                                        <input id="toggle1" class="thumbler__toggle thumbler__toggle-round vacancy__thumbler-toggle" type="checkbox" checked>
+                                        <label for="toggle1" class="thumbler__label"></label>
                                     </div>
                                 </div>
                             </div>
