Added some corrections to project

--- a/src/components/salary-filter/salary-filter.scss
+++ b/src/components/salary-filter/salary-filter.scss
@@ -1,15 +1,16 @@
 .salary-filter {
   touch-action: none;
+  margin-bottom: 4px;
 
   &__info {
     color: $lightgray;
     display: flex;
     align-items: center;
     margin-top: 14px;
-    margin-bottom: 5px;
+    margin-bottom: 11px;
 
     @media(max-width: 1099px) {
-      margin-bottom: 15px;
+      margin-bottom: 25px;
     }
   }
 
@@ -20,6 +21,10 @@
       justify-content: space-between;
       align-items: center;
       color: $lightgray;
+
+      @media(max-width: 1099px) {
+        margin-bottom: 20px;
+      }
     }
   }
 
