--- a/src/components/candidate/candidate.scss
+++ b/src/components/candidate/candidate.scss
@@ -8,6 +8,7 @@
 
     @media(max-width: 767px) {
       flex-direction: column;
+      align-items: flex-start;
       margin-bottom: 18px;
     }
   }
