--- a/src/pages/recruter-dashboard.hbs
+++ b/src/pages/recruter-dashboard.hbs
@@ -120,6 +120,14 @@
                             <ul class="vacancy__tags">
                                 <li class="vacancy__tag">Python</li>
                                 <li class="vacancy__tag">Django</li>
+                                <li class="vacancy__tag">DRF</li>                                <li class="vacancy__tag">Python</li>
+                                <li class="vacancy__tag">Django</li>
+                                <li class="vacancy__tag">DRF</li>                                <li class="vacancy__tag">Python</li>
+                                <li class="vacancy__tag">Django</li>
+                                <li class="vacancy__tag">DRF</li>                                <li class="vacancy__tag">Python</li>
+                                <li class="vacancy__tag">Django</li>
+                                <li class="vacancy__tag">DRF</li>                                <li class="vacancy__tag">Python</li>
+                                <li class="vacancy__tag">Django</li>
                                 <li class="vacancy__tag">DRF</li>
                             </ul>
                             <div class="vacancy__contact">
