--- a/src/components/interview/interview.scss
+++ b/src/components/interview/interview.scss
@@ -2,8 +2,6 @@
   margin-bottom: 16px;
 
   &__inner {
-    display: flex;
-    justify-content: space-between;
 
     @media(max-width: 767px) {
       flex-direction: column;
@@ -156,20 +154,13 @@
   }
 
   &__button {
-    &-video {
-      width: 246px;
-      padding: 14px;
-      margin-bottom: 20px;
-
-      @media(max-width: 767px) {
-        font-size: 14px;
-        line-height: 1.2;
-        width: 220px;
-      }
-    }
 
     &-feedback {
-      width: 246px;
+      width: 200px;
+      height: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       padding: 13px;
       border: 1px solid $blue;
       background-color: #fff;
@@ -184,8 +175,225 @@
         margin-bottom: 20px;
         font-size: 14px;
         line-height: 1.2;
-        width: 220px;
+      }
+    }
+
+    &-inner {
+      display: flex;
+      justify-content: space-between;
+      width: 100px;
+    }
+  }
+}
+
+
+.scheduled-interviews {
+
+  &__slides {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .slick {
+    &-prev {
+      left: unset;
+      right: 40px;
+      top: -44px;
+      border-radius: 50%;
+      background: #fff;
+      width: 24px;
+      height: 24px;
+      background-image: url(../images/left-arrow.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+
+      &:hover {
+        box-shadow: 0 0 1px rgba(0, 0, 0, 0.04), 0 2px 6px rgba(91, 92, 238, 0.06), 0 15px 30px rgba(91, 92, 238, 0.15);
+        background-image: url(../images/left-arrow_blue.svg);
+      }
+
+      @media(max-width: 499px) {
+        left: -5px;
+        right: unset;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+    }
+
+    &-next {
+      left: unset;
+      right: 1px;
+      top: -44px;
+      border-radius: 50%;
+      background: #fff;
+      width: 24px;
+      height: 24px;
+      background-image: url(../images/right-arrow.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+
+      &:hover {
+        box-shadow: 0 0 1px rgba(0, 0, 0, 0.04), 0 2px 6px rgba(91, 92, 238, 0.06), 0 15px 30px rgba(91, 92, 238, 0.15);
+        background-image: url(../images/right-arrow_blue.svg);
+      }
+
+      @media(max-width: 499px) {
+        left: unset;
+        right: -5px;
+        top: 50%;
+        transform: translateY(-50%);
       }
     }
   }
+}
+
+.scheduled-interview {
+
+  &__candidate {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.6;
+    letter-spacing: 0.05em;
+    color: $black;
+  }
+
+  &__position {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.4;
+    letter-spacing: 0.05em;
+    color: $black;
+  }
+
+  &__line {
+
+    &-first {
+      margin-bottom: 28px;
+    }
+
+    &-second {
+      display: flex;
+      margin-bottom: 29px;
+    }
+  }
+
+  &__date {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.4;
+    letter-spacing: 0.07em;
+    color: $black;
+    display: flex;
+    align-items: center;
+
+    &:before {
+      content: '';
+      width: 16px;
+      height: 16px;
+      display: block;
+      background-image: url(../images/calendar.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+      margin-right: 6px;
+    }
+  }
+
+  &__time {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.4;
+    letter-spacing: 0.07em;
+    color: $black;
+    display: flex;
+    align-items: center;
+    margin-left: 15px;
+
+    &:before {
+      content: '';
+      width: 16px;
+      height: 16px;
+      display: block;
+      background-image: url(../images/clock.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+      margin-right: 6px;
+    }
+
+  }
+
+
+  &__comment {
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 1.25;
+    letter-spacing: 0.05em;
+    color: $black;
+    margin-bottom: 15px;
+  }
+
+  &__button {
+    max-width: 200px;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 13px;
+    border: 1px solid $blue;
+    background-color: #fff;
+    color: $blue;
+    box-shadow: none;
+
+    &:hover {
+      color: #fff;
+
+      svg {
+        stroke: #fff;
+        fill: #fff;
+      }
+    }
+
+    @media(max-width: 767px) {
+      margin-bottom: 20px;
+      font-size: 14px;
+      line-height: 1.2;
+    }
+  }
+
+}
+
+.visual {
+  display: block !important;
+  width: 246px !important;
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.4;
+  letter-spacing: 0.05em;
+  color: $gray;
+  padding: 30px 25px;
+  margin: 0 auto;
+
+  &:hover {
+    text-decoration: none;
+    opacity: 0.7;
+  }
+
+  @media(max-width: 374px) {
+    padding: 25px 20px 20px;
+    width: 220px !important;
+  }
+}
+
+.camera {
+  width: 27px;
+  height: 14px;
+  fill: $blue;
+}
+
+.zoom {
+  width: 61px;
+  height: 14px;
+  fill: $blue;
 }
