--- a/src/components/vacancy/vacancy.scss
+++ b/src/components/vacancy/vacancy.scss
@@ -1,23 +1,26 @@
 .vacancy {
-  position: relative;
-  margin-bottom: 18px;
+  margin-bottom: 23px;
 
   &__thumbler {
+    position: absolute;
+    z-index: 5;
+    top: 48px;
+    right: 0;
 
     @media(max-width: 767px) {
-      position: absolute;
-      top: 3px;
-      right: 0;
+      top: 0;
+      right: -10px;
     }
 
     @media(max-width: 575px) {
-      top: 1px;
+      right: -5px;
     }
   }
 
   &__line {
     &-first {
       align-items: center;
+      position: relative;
 
       @media(max-width: 767px) {
         align-items: flex-start;
@@ -25,6 +28,7 @@
     }
 
     &-second {
+      position: relative;
       display: flex;
       justify-content: space-between;
       margin-bottom: 13px;
@@ -140,7 +144,7 @@
 
   &__tags {
     display: flex;
-    margin-bottom: 12px;
+    margin-bottom: 14px;
     flex-wrap: wrap;
   }
 
@@ -163,12 +167,18 @@
     line-height: 1.4;
     letter-spacing: 0.05em;
     color: $black;
-    margin-bottom: 15px;
+    margin-bottom: 8px;
+    max-width: calc(100% - 100px);
+    width: 100%;
 
     @media(max-width: 575px) {
       font-size: 14px;
       line-height: 1.2;
       margin-bottom: 10px;
+    }
+
+    &-line {
+      position: relative;
     }
   }
 
@@ -178,5 +188,44 @@
 
   &__company {
     font-weight: 600;
+  }
+
+  &__comments {
+    display: block;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 1.4;
+    letter-spacing: 0.05em;
+    color: $blue;
+    position: absolute;
+    top: 0;
+    right: -1px;
+
+    @media(max-width: 575px) {
+      font-size: 14px;
+      line-height: 1.2;
+      right: -5px;
+    }
+  }
+
+  &__trash {
+    position: absolute;
+    top: 48px;
+    right: 0;
+    cursor: pointer;
+    display: none;
+
+    @media(max-width: 767px) {
+      top: -5px;
+      right: -10px;
+    }
+
+    @media(max-width: 575px) {
+      right: -5px;
+    }
+
+    &.ready {
+      display: block;
+    }
   }
 }
