--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -5,6 +5,7 @@
             <ol>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 8 <a href="./registration.html">Реєстрацiя</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 1 <a href="./recruter-dashboard.html">Dashboard рекрутера</a></li>
+                <li style="list-style: decimal; margin-left: 20px">Ескiз 12 <a href="./recruter-dashboard-empty.html">Dashboard (пуста) рекрутера</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 2 <a href="./recruter-search-candidate.html">Рекрутер переглядає профайл кандидата</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 3 <a href="./recruter-search-candidates-list.html">Рекрутер переглядає список кандидатiв</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 4 <a href="./recruitment-list.html">Рекрутер: список наймiв</a></li>
