--- a/src/pages/recruter-dashboard.hbs
+++ b/src/pages/recruter-dashboard.hbs
@@ -102,7 +102,7 @@
                                 <div class="vacancy__salary">2000-2500$</div>
                                 <div class="vacancy__location">Київ</div>
                             </div>
-                            <img src="./images/red-trash.svg" class="vacancy__trash">
+                            <img src="./images/red-trash.png" class="vacancy__trash">
                         </div>
                         <div class="vacancy__line-third">
                             <div class="vacancy__experience">
