--- a/src/components/candidate/candidate.scss
+++ b/src/components/candidate/candidate.scss
@@ -28,7 +28,7 @@
       display: flex;
       align-items: center;
 
-      @media(max-width: 575px) {
+      @media(max-width: 767px) {
         align-items: flex-start;
       }
     }
@@ -38,10 +38,15 @@
       width: 100%;
     }
 
+    &_nowrap {
+      max-width: 100%;
+    }
+
   }
 
   &__rating {
     margin-left: 10px;
+    position: relative;
 
     @media(max-width: 575px) {
       padding-top: 2px;
