--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -86,6 +86,30 @@
       margin: 0;
     }
   }
+
+  &__message {
+
+    &-info {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 1.4;
+      letter-spacing: 0.03em;
+      color: $lightgray;
+      display: flex;
+      margin-top: -1px;
+
+      &:before {
+        content: '';
+        width: 16px;
+        height: 16px;
+        display: block;
+        background-image: url(../images/info.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        margin: 3px 9px 0 0;
+      }
+    }
+  }
 }
 
 .sent-offers {
