--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,4 +1,5 @@
 @import './container/container';
+@import './popup/popup';
 @import './reg-form/reg-form';
 @import './spinner/spinner';
 @import './radio/radio';
@@ -12,6 +13,7 @@
 @import './filters/filters';
 @import './main-menu/main-menu';
 @import './the-button/the-button';
+@import './load-more/load-more';
 @import './main-header/main-header';
 @import './main-content/main-content';
 @import './registration/registration';
