--- a/src/components/search-form/search-form.scss
+++ b/src/components/search-form/search-form.scss
@@ -137,19 +137,20 @@
   &__tags {
     display: flex;
     flex-wrap: wrap;
-    max-width: 600px;
+    max-width: calc(100% - 250px);
+    width: 100%;
 
-    @media(max-width: 839px) {
-      max-width: 100%;
+    @media(max-width: 767px) {
+      max-width: calc(100% - 200px);
+    }
+
+    @media(max-width: 575px) {
+      padding-top: 40px;
+      max-width: 575px;
     }
 
     &-subscribe {
-      display: flex;
-      justify-content: space-between;
-
-      @media(max-width: 839px) {
-        flex-direction: column;
-      }
+      position: relative;
     }
 
   }
@@ -163,6 +164,7 @@
     padding: 4px 27px 4px 6px;
     margin-right: 8px;
     margin-bottom: 5px;
+    align-self: center;
 
     &:after {
       content: '';
@@ -180,18 +182,25 @@
   }
 
   &__subscribe {
+    position: absolute;
+    right: 0;
+    top: -13px;
     cursor: pointer;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.4;
     letter-spacing: 0.04em;
-    color: $black;
+    color: $blue;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 13px 26px;
+    border: 1px solid #5B5CEE;
+    border-radius: 2px;
 
-    @media(max-width: 839px) {
-      align-items: center;
-      align-self: flex-end;
-      margin-top: 20px;
+    @media(max-width: 767px) {
+      max-width: 200px;
+      padding: 10px;
     }
 
     &:before {
@@ -200,7 +209,7 @@
       transition: $delay;
       white-space: nowrap;
 
-      @media(max-width: 839px) {
+      @media(max-width: 767px) {
         font-size: 14px;
         line-height: 1.2;
       }
@@ -209,8 +218,8 @@
     &:after {
       content: '';
       display: block;
-      width: 24px;
-      height: 24px;
+      width: 15px;
+      height: 15px;
       background-image: url('../images/subscribe.svg');
       background-repeat: no-repeat;
       background-position: center;
@@ -226,7 +235,6 @@
 
       &:before {
         content: 'Видалити з підписок';
-        color: $blue;
       }
 
       &:after {
