--- a/src/pages/candidate-search-offers.hbs
+++ b/src/pages/candidate-search-offers.hbs
@@ -156,6 +156,7 @@
                                 </div>
                             </div>
                         </div>
+                        {{> load-more }}
                     </div>
                 </div>
                 <div class="inner-container__small dashboard__aside">
