Added rating system to candidates profiles

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,5 +1,6 @@
 @import './container/container';
-@import './popup/popup';
+@import './star/star';
+@import './trash/trash';
 @import './reg-form/reg-form';
 @import './spinner/spinner';
 @import './radio/radio';
