--- a/src/components/worksheet-form/worksheet-form.hbs
+++ b/src/components/worksheet-form/worksheet-form.hbs
@@ -50,7 +50,7 @@
             <div class="worksheet-form__line not-centered">
                 <label for="skills" class="worksheet-form__label">Навички</label>
                 <div id="skills" class="worksheet-form__area tags">
-                    <div class="search-form__tags">
+                    <div class="search-form__tags nowrap">
                         <div class="base__notes search-form__tag">С++</div>
                         <div class="base__notes search-form__tag">STL</div>
                         <div class="base__notes search-form__tag">Qt</div>
