--- a/src/pages/recruter-dashboard.hbs
+++ b/src/pages/recruter-dashboard.hbs
@@ -102,7 +102,9 @@
                                 <div class="vacancy__salary">2000-2500$</div>
                                 <div class="vacancy__location">Київ</div>
                             </div>
-                            <img src="./images/red-trash.png" class="vacancy__trash">
+                            <div class="vacancy__trash">
+                                {{> trash }}
+                            </div>
                         </div>
                         <div class="vacancy__line-third">
                             <div class="vacancy__experience">
@@ -143,8 +145,8 @@
                             <div class="candidate__date vacancy__date">12 Годин тому</div>
                             <div class="vacancy__thumbler">
                                 <div class="thumbler">
-                                    <input id="toggle1" class="thumbler__toggle thumbler__toggle-round vacancy__thumbler-toggle" type="checkbox" checked>
-                                    <label for="toggle1" class="thumbler__label"></label>
+                                    <input id="toggle2" class="thumbler__toggle thumbler__toggle-round vacancy__thumbler-toggle" type="checkbox" checked>
+                                    <label for="toggle2" class="thumbler__label"></label>
                                 </div>
                             </div>
                         </div>
@@ -153,7 +155,9 @@
                                 <div class="vacancy__salary">2000-2500$</div>
                                 <div class="vacancy__location">Київ</div>
                             </div>
-                            <img src="./images/red-trash.svg" class="vacancy__trash">
+                            <div class="vacancy__trash">
+                                {{> trash }}
+                            </div>
                         </div>
                         <div class="vacancy__line-third">
                             <div class="vacancy__experience">
