--- a/src/pages/recruter-search-candidates-list.hbs
+++ b/src/pages/recruter-search-candidates-list.hbs
@@ -23,10 +23,9 @@
                                     <div class="candidate">
                                         <div class="candidate__first-line">
                                             <div class="candidate__name-rating">
-                                                <a href="recruter-search-candidate.html" class="base__title candidate__name candidate__name_nowrap">Python Developer</a>
+                                                <a href="recruter-search-candidate.html" class="base__title candidate__name nowrap">Python Developer</a>
                                                 <div class="candidate__rating">
-                                                    {{> icon iconName="star_filled" classNames="star" }}
-                                                    {{> popup-inform }}
+                                                    {{> star }}
                                                 </div>
                                             </div>
                                             <div class="candidate__date">Профiль вiд: 04.10.2020</div>
@@ -89,9 +88,13 @@
                                     <div class="candidate">
                                         <div class="candidate__first-line">
                                             <div class="candidate__name-rating">
-                                                <a href="recruter-search-candidate.html" class="base__title candidate__name candidate__name_nowrap">Python Developer</a>
-                                                <div class="candidate__rating popup-inform">
-                                                    {{> icon iconName="star_filled" classNames="star" }}
+                                                <a href="recruter-search-candidate.html" class="base__title candidate__name nowrap">Python Developer</a>
+                                                <div class="candidate__rating">
+                                                    <div class="star star_rated">
+                                                        <div class="star__container">
+                                                            <div class="star__inform"></div>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="candidate__date">Профiль вiд: 04.06.2020</div>
@@ -154,9 +157,9 @@
                                     <div class="candidate">
                                         <div class="candidate__first-line">
                                             <div class="candidate__name-rating">
-                                                <a href="recruter-search-candidate.html" class="base__title candidate__name candidate__name_nowrap">Python Developer</a>
-                                                <div class="candidate__rating popup-inform">
-                                                    {{> icon iconName="star_filled" classNames="star" }}
+                                                <a href="recruter-search-candidate.html" class="base__title candidate__name nowrap">Python Developer</a>
+                                                <div class="candidate__rating">
+                                                    {{> star }}
                                                 </div>
                                             </div>
                                             <div class="candidate__date">Профiль вiд: 04.01.2020</div>
