--- a/src/components/candidate/candidate.scss
+++ b/src/components/candidate/candidate.scss
@@ -24,9 +24,12 @@
   &__name {
     display: block;
 
+    &.nowrap {
+      max-width: 100%;
+    }
+
     &-rating {
       display: flex;
-      align-items: center;
 
       @media(max-width: 767px) {
         align-items: flex-start;
@@ -37,11 +40,6 @@
       max-width: calc(100% - 100px);
       width: 100%;
     }
-
-    &_nowrap {
-      max-width: 100%;
-    }
-
   }
 
   &__rating {
