--- a/src/components/search-form/search-form.scss
+++ b/src/components/search-form/search-form.scss
@@ -145,12 +145,19 @@
     }
 
     @media(max-width: 575px) {
-      padding-top: 40px;
       max-width: 575px;
     }
 
     &-subscribe {
       position: relative;
+
+      @media(max-width: 575px) {
+        padding-top: 40px;
+      }
+    }
+
+    &.nowrap {
+      max-width: 100%;
     }
 
   }
