--- a/src/components/main-header/main-header.hbs
+++ b/src/components/main-header/main-header.hbs
@@ -14,7 +14,7 @@
             <div class="main-header__user-notices">
                 <div class="dropdown">
                     <div class="dropdown__icon">
-                        {{> icon iconName="notice_active" classNames="notice" }}
+                        <img src="./images/bell_active.png">
                     </div>
                     <div class="fraimed-container dropdown__container">
                         <div class="base__subtitle dropdown__title">Новi повiдомлення</div>
