--- a/src/components/worksheet-form/worksheet-form.hbs
+++ b/src/components/worksheet-form/worksheet-form.hbs
@@ -4,6 +4,8 @@
         <label class="worksheet-form__tab-name" for="tab1">Профiль</label>
         <input id="tab2" type="radio" name="tabs" class="worksheet-form__tab-input">
         <label class="worksheet-form__tab-name" for="tab2">Контакти<span class="hidden575"> та резюме</span></label>
+        <input id="tab3" type="radio" name="tabs" class="worksheet-form__tab-input">
+        <label class="worksheet-form__tab-name tab-interview" for="tab3">Інтерв'ю</label>
         <div id="content1" class="worksheet-form__content">
             <div class="worksheet-form__line">
                 <label for="category" class="worksheet-form__label">Категорiя</label>
@@ -195,7 +197,8 @@
                 </label>
                 <div class="worksheet-form__files">Виберiть файл з CV</div>
             </div>
-
+        </div>
+        <div id="content3" class="worksheet-form__content">
         </div>
         <div class="worksheet-form__buttons">
             <a href="#" class="the-button worksheet-form__public-link">Дивитися публічний профіль</a>
