--- a/src/components/worksheet-form/worksheet-form.scss
+++ b/src/components/worksheet-form/worksheet-form.scss
@@ -373,7 +373,8 @@
 }
 
 #tab1:checked ~ #content1,
-#tab2:checked ~ #content2 {
+#tab2:checked ~ #content2,
+#tab3:checked ~ #content3 {
   display: block;
 }
 
