--- a/src/pages/candidate-search-offers.hbs
+++ b/src/pages/candidate-search-offers.hbs
@@ -33,7 +33,7 @@
                                     </div>
                                 </div>
                                 <div class="search-form__tags-subscribe">
-                                    <div class="search-form__tags">
+                                    <div class="search-form__tags nowrap">
                                         <div class="base__notes search-form__tag">Київ</div>
                                         <div class="base__notes search-form__tag">Python</div>
                                         <div class="base__notes search-form__tag">1000-2200$</div>
