--- a/src/pages/recruter-dashboard.hbs
+++ b/src/pages/recruter-dashboard.hbs
@@ -88,7 +88,12 @@
                 <div class="vacancies__list">
                     <div class="fraimed-container dashboard__container vacancy">
                         <div class="candidate__first-line vacancy__line-first">
-                            <a href="#" class="base__title candidate__name">Senior Backend Developer</a>
+                            <div class="candidate__name-rating">
+                                <a href="#" class="base__title candidate__name">Senior Backend Developer</a>
+                                <div class="candidate__rating">
+                                    {{> star }}
+                                </div>
+                            </div>
                             <div class="candidate__date vacancy__date">12 Годин тому</div>
                             <div class="vacancy__thumbler">
                                 <div class="thumbler">
@@ -141,7 +146,12 @@
                     </div>
                     <div class="fraimed-container dashboard__container vacancy">
                         <div class="candidate__first-line vacancy__line-first">
-                            <a href="#" class="base__title candidate__name">Senior Backend Developer</a>
+                            <div class="candidate__name-rating">
+                                <a href="#" class="base__title candidate__name">Senior Backend Developer</a>
+                                <div class="candidate__rating">
+                                    {{> star }}
+                                </div>
+                            </div>
                             <div class="candidate__date vacancy__date">12 Годин тому</div>
                             <div class="vacancy__thumbler">
                                 <div class="thumbler">
