--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -3,13 +3,14 @@
         <div class="container">
             Це приблизний список посилань на рiзнi сторiнки, в залежностi вiд ролi користувача
             <ol>
-                <li style="list-style: decimal; margin-left: 20px">Ескiз 8 <a href="./registration.html">Реєстрацiя</a></li>
+                <li style="list-style: decimal; margin-left: 20px">Ескiз 12 <a href="./registration.html">Реєстрацiя</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 1 <a href="./recruter-dashboard.html">Dashboard рекрутера</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 12 <a href="./recruter-dashboard-empty.html">Dashboard (пуста) рекрутера</a></li>
-                <li style="list-style: decimal; margin-left: 20px">Ескiз 2 <a href="./recruter-search-candidate.html">Рекрутер переглядає профайл кандидата</a></li>
-                <li style="list-style: decimal; margin-left: 20px">Ескiз 3 <a href="./recruter-search-candidates-list.html">Рекрутер переглядає список кандидатiв</a></li>
-                <li style="list-style: decimal; margin-left: 20px">Ескiз 4 <a href="./recruitment-list.html">Рекрутер: список наймiв</a></li>
-                <li style="list-style: decimal; margin-left: 20px">Ескiз 7,8 <a href="./candidates-profile.html">Кандидатський профайл</a></li>
+                <li style="list-style: decimal; margin-left: 20px">Ескiз 2, 2.2 <a href="./recruter-search-candidate.html">Рекрутер переглядає профайл кандидата</a></li>
+                <li style="list-style: decimal; margin-left: 20px">Ескiз 2.3 <a href="./recruter-search-candidate-empty-right.html">Рекрутер переглядає профайл кандидата (пустий профiль кандидата)</a></li>
+                <li style="list-style: decimal; margin-left: 20px">Ескiз 5, 5.2 <a href="./recruter-search-candidates-list.html">Рекрутер переглядає список кандидатiв</a></li>
+                <li style="list-style: decimal; margin-left: 20px">Ескiз 6 <a href="./recruitment-list.html">Рекрутер переглядає список наймiв</a></li>
+                <li style="list-style: decimal; margin-left: 20px">Ескiз 7, 7.2, 8 <a href="./candidates-profile.html">Кандидатський профайл</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 9 <a href="./candidate-search-offers.html">Кандидат переглядає вакансiї</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 13 <a href="./candidates-account.html">Кандидатський аккаунт</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 14 <a href="./candidates-settings.html">Кандидатськi налаштуваня</a></li>
