--- a/src/pages/candidates-profile.hbs
+++ b/src/pages/candidates-profile.hbs
@@ -22,7 +22,7 @@
                     </div>
                 </div>
                 <div class="dashboard__section candidates-profile__worksheet">
-                    <div class="fraimed-container candidates-profile__worksheet-container">
+                    <div class="candidates-profile__worksheet-container fraim">
                         <div class="candidates-profile__worksheet-form">
                             {{> worksheet-form }}
                         </div>
