--- a/src/components/candidates-profile/candidates-profile.scss
+++ b/src/components/candidates-profile/candidates-profile.scss
@@ -114,7 +114,7 @@
   &__worksheet {
 
     &-form {
-      padding: 20px 42px;
+      padding: 0 0 20px 0;
 
       @media(max-width: 575px) {
         padding: 0;
@@ -122,10 +122,11 @@
     }
 
     &-container {
-      padding: 26px 32px 60px;
+      padding: 0 0 60px 0;
 
       @media(max-width: 767px) {
-        padding: 20px 20px 30px 20px;
+        //padding: 0 20px 30px 20px;
+        padding: 0 0 30px 0;
       }
     }
   }
